--- a/style.css
+++ b/style.css
@@ -48,9 +48,9 @@ a {
     text-decoration: none;
 }
 
-.div_link:hover {
+/*.div_link:hover {
     background-color: rgba(0, 0, 0, 0.531);
-}
+}*/
 
 img {
     width: 8%;
