--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ html {
     height: 250px;
     margin: auto;
     border-radius: 10px;
-    background: url("logo004.png") no-repeat ;
+    background: url("../img/arsenica.png") no-repeat ;
     background-size: cover
 }
 
@@ -54,5 +54,5 @@ a {
 
 img {
     width: 8%;
-    margin-right: 5px;
+    margin-right: 8px;
 }
